# triangle-counting-spla-vs-gunrock

./: .gitmodules  CMakeLists.txt  README.md
graphs/: two_triangle_graph.txt
include/: CMakeLists.txt
results/: example_gunrock_bench_result.json  example_spla_bench_result.json  example_summary_table.csv  spla_bench_result.json
scripts/: analyze.py  build.py  download.py  get_graphics.py  run_all_and_analyze.py  run_benchs.py
spla-triangle-counting/: CMakeLists.txt  spla-measure.cpp
src/: CMakeLists.txt  common.hpp  spla-measure.cpp
src/gunrock/: CMakeLists.txt  algo.cu  algo.cuh  gunrock-measure.cpp
src/spla/: CMakeLists.txt  spla-measure.cpp
